# sys-prog-task2

./: CMakeLists.txt  Makefile  calculator.cpp  calculator.h  main.cpp
